fixing section icon sizing / spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -89,8 +89,8 @@ em   	{	font-style: italic;	}
 }
 
 .section-icon {
-	max-width: 45px;
-	max-height: 44px;
+	max-width: 50px;
+	max-height: 49px;
 	width: 100%;
 	margin-bottom: 5px;
 }
@@ -1030,8 +1030,8 @@ em   	{	font-style: italic;	}
 	}//img
 
 	.section-h1 {
-		font-size: 18px;
-		margin-bottom: 25px;
+		font-size: 23px;
+		margin-bottom: 20px;
 	}
 
 	@media (min-width: 500px) {
@@ -1042,7 +1042,7 @@ em   	{	font-style: italic;	}
 		padding: 30px 80px 50px 80px;
 
 		.section-h1 {
-			margin-bottom: 40px;
+			margin-bottom: 30px;
 		}
 
 	}//MQ
